# kiss-xmpp

./: .gitignore  Cargo.toml  README.md  kiss-xmpp.toml
.ci/: Jenkinsfile  build.sh
src/: main.rs
