[package]
name = "kiss-xmpp"
version = "0.0.1"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "XMPP client that keeps it simple, stupid."
repository  = "https://code.moparisthebest.com/moparisthebest/kiss-xmpp"
keywords    = ["xmpp", "chat", "client"]

license = "AGPL-3.0-or-later"
readme = "README.md"

edition = "2021"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
    "kiss-xmpp.toml",
]

[dependencies]
futures = "0.3"
toml = "0.5"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
minidom = "0.15"
tokio-xmpp = { version = "3.2.0", default-features = false, features = ["tls-rust"] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
xmpp-parsers = "0.19"
die = "0.2.0"
anyhow = "1.0"
env_logger = "0.9"
rand = "0.8.5"
async-recursion = "1.0.5"

[profile.release]
strip = true
